--- a/examples/sql_exporter.yml
+++ b/examples/sql_exporter.yml
@@ -15,10 +15,10 @@ global:
 target:
   # Data source name always has a URI schema that matches the driver name. In some cases (e.g. MySQL)
   # the schema gets dropped or replaced to match the driver expected DSN format.
-  data_source_name: 'sqlserver://prom_user:prom_password@dbserver1.example.com:1433'
+  data_source_name: ''
 
   # Collectors (referenced by name) to execute on the target.
-  collectors: [mssql_standard]
+  collectors: [vertica_standard]
 
 # Collector files specifies a list of globs. One collector definition is read from each matching file.
 collector_files: 
