--- a/.github/workflows/go_build.yml
+++ b/.github/workflows/go_build.yml
@@ -5,7 +5,7 @@ name: Generate release
 on:
   push:
     branches:
-      - main
+      - feature/gomod
 
 # workflow tasks
 jobs:
@@ -21,6 +21,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: wangyoucao577/go-release-action@master
         with:
+          project_path: ./cmd/sql_exporter/*
+          binary_name: sql-exporter
           github_token: ${{ secrets.GITHUB_TOKEN }}
           goos: ${{ matrix.goos }}
+          build_flags: -v
           goarch: ${{ matrix.goarch }}
