--- a/.github/workflows/go_build.yml
+++ b/.github/workflows/go_build.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: wangyoucao577/go-release-action@master
         with:
-          project_path: ./cmd/sql_exporter/*
+          project_path: ./cmd/sql_exporter/
           binary_name: sql-exporter
           github_token: ${{ secrets.GITHUB_TOKEN }}
           goos: ${{ matrix.goos }}
