add release generation in gh-actions

--- a/.github/workflows/go_build.yml
+++ b/.github/workflows/go_build.yml
@@ -3,9 +3,9 @@ name: Generate release
 
 # on events
 on:
-  push:
-    branches:
-      - feature/gomod
+  release:
+    types:
+      - published
 
 # workflow tasks
 jobs:
